start page v1.2(accessibility)

--- a/component/header/NavLink.module.css
+++ b/component/header/NavLink.module.css
@@ -1,7 +1,7 @@
 .link:link,
 .link:visited {
   text-decoration: none;
-  color: #ddd6cb;
+  color: #fff;
   font-weight: bold;
   padding: 0.5rem 0.5rem;
   border-radius: 0.5rem;
