--- a/app/globals.css
+++ b/app/globals.css
@@ -22,6 +22,13 @@
 
   body {
     color: #00000020;
-    background-color: #ffffff80;
+    background-color: #fff;
+  }
+  .skipmain {
+    position: absolute;
+    left: -10000px;
+    width: 1px;
+    height: 1px;
+    overflow: hidden;
   }
 }
