--- a/component/header/Header.module.css
+++ b/component/header/Header.module.css
@@ -11,7 +11,7 @@
   justify-content: space-between;
   align-items: center;
   padding: 2rem 1rem;
-  background-color: #3968ad;
+  background-color: #113569;
   gap: 2rem;
 }
 
@@ -30,7 +30,7 @@
   justify-content: center;
   gap: 2rem;
   text-decoration: none;
-  color: #ddd6cb;
+  color: #fff;
   font-weight: bold;
   /* letter-spacing: -0.05rem; */
   /* text-transform: :uppercase; */
