--- a/app/globals.css
+++ b/app/globals.css
@@ -1,5 +1,5 @@
+/* @import url(https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap); */
 :root {
-  @import url(https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap);
   * {
     box-sizing: border-box;
     padding: 0;
@@ -8,16 +8,16 @@
 
   html,
   body {
-    /* font-family: "Inter", sans-serif;
+    /* 
     color: var(--color-primary-light);
-    font-weight: 400;
-    line-height: 1.21;
-    font-size: 24px;
-    margin: 0; */
-
+    */
+    margin: 0;
     max-width: 100vw;
     overflow-x: hidden;
     font-family: "Inter", sans-serif;
+    font-size: 24px;
+    font-weight: 400;
+    line-height: 1.21;
   }
 
   body {
