--- a/component/footer/Footer.module.css
+++ b/component/footer/Footer.module.css
@@ -2,16 +2,17 @@
   display: flex;
   justify-content: space-around;
   align-items: center;
-  background-color: #3968ad;
+  background-color: #16407e;
   color: #fff;
   gap: 0.5rem;
   pointer-events: none;
 }
 .social {
+  margin: 0 1rem;
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   justify-content: center;
-  gap: 2rem;
+  gap: 1.3rem;
   text-decoration: none;
   color: #fff;
   font-weight: bold;
@@ -21,9 +22,10 @@
 
 .contacts {
   display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 2rem;
+  flex-direction: column;
+  /* align-items: center;
+  justify-content: center; */
+  gap: 1.5rem;
   text-decoration: none;
   color: #fff;
   font-weight: bold;
