--- a/component/header/Header.module.css
+++ b/component/header/Header.module.css
@@ -1,18 +1,34 @@
 .header {
-  /* Анна */
-  /* position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  padding: 40px 0;
-  background-color: #113569; */
-  /* оксана */
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 2rem 1rem;
+  padding: 2rem 2rem;
   background-color: #113569;
-  gap: 2rem;
+  gap: 1.5rem;
+}
+
+.headerAdmin {
+  display: block;
+}
+.logo {
+  /* max-width: 25vw; */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 1.5rem;
+  text-decoration: none;
+  color: #fff;
+}
+.logo img {
+  width: 4rem;
+  height: 4rem;
+  object-fit: contain;
+}
+.h1 {
+  font-weight: 400;
+  line-height: 1.5rem;
+  /* font-size: 24px; */
+  font-size: 1.5rem;
 }
 
 .nav ul {
@@ -20,37 +36,104 @@
   margin: 0;
   padding: 0;
   display: flex;
-  gap: 1.5rem;
-  font-size: 1.25 rem;
+  gap: 1.2rem;
+  /* font-size: 20px; */
+  font-size: 1.25rem;
+  font-weight: 400;
 }
 
-.logo {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 2rem;
-  text-decoration: none;
-  color: #fff;
-  font-weight: bold;
-  /* letter-spacing: -0.05rem; */
-  /* text-transform: :uppercase; */
-  font-size: 1.15rem;
+@media (max-width: 420px) {
 }
 
-.logo img {
-  width: 5rem;
-  height: 5rem;
-  object-fit: contain;
-}
-
-@media (max-with: 420px) and (min-with: 1024px) {
+@media (min-width: 420px) and (max-width: 768px) {
   .header {
-    padding: 2rem 10%;
+    padding: 0.75rem 0.75rem;
+    gap: 0.5rem;
+  }
+  .logo {
+    /* max-width: 75vw; */
     gap: 0.75rem;
+  }
+  .logo img {
+    width: 1.5rem;
+    height: 1.5rem;
+    object-fit: contain;
+  }
+  .h1 {
+    line-height: 0.75rem;
+    font-size: 0.5rem;
+  }
+  .nav ul {
+    gap: 0.5rem;
+    font-size: 0.4rem;
+  }
+}
+@media (min-width: 768px) and (max-width: 820px) {
+  .header {
+    padding: 1.2rem 1.2rem;
+    gap: 0.9rem;
+  }
+  .logo {
+    max-width: 30vw;
+    gap: 1rem;
   }
   .logo img {
     width: 2.5rem;
     height: 2.5rem;
     object-fit: contain;
+  }
+  .h1 {
+    line-height: 1.2rem;
+    font-size: 0.85rem;
+  }
+  .nav ul {
+    gap: 0.6rem;
+    font-size: 0.75rem;
+  }
+}
+
+@media (min-width: 820px) and (max-width: 1024px) {
+  .header {
+    padding: 1.5rem 1.5rem;
+    gap: 1.1rem;
+  }
+  .logo {
+    max-width: 30vw;
+    gap: 1rem;
+  }
+  .logo img {
+    width: 3rem;
+    height: 3rem;
+    object-fit: contain;
+  }
+  .h1 {
+    font-size: 1rem;
+  }
+  .nav ul {
+    gap: 0.8rem;
+    font-size: 0.8rem;
+  }
+}
+
+@media (min-width: 1024px) and (max-width: 1440px) {
+  .header {
+    padding: 1.9rem 1.9rem;
+    gap: 1.4rem;
+  }
+  .logo {
+    max-width: 30vw;
+    gap: 1.35rem;
+  }
+  .logo img {
+    width: 3.5rem;
+    height: 3.5rem;
+    object-fit: contain;
+  }
+  .h1 {
+    font-size: 1.25rem;
+  }
+  .nav ul {
+    gap: 1.1rem;
+    font-size: 1.05rem;
   }
 }
