--- a/component/mainsection/MainSection.module.css
+++ b/component/mainsection/MainSection.module.css
@@ -1,3 +1,11 @@
 .mainsection {
-  color: black;
+  color: #181616;
+}
+.h3title {
+  margin-top: 1.1rem;
+  color: #113569;
+  font-weight: 900;
+  font-size: 40px;
+  line-height: 1.4;
+  text-align: center;
 }
