--- a/component/textheader/TextHeader.module.css
+++ b/component/textheader/TextHeader.module.css
@@ -1,3 +1,96 @@
 .textheader {
-  color: #000;
+  max-width: 60vw;
+  color: #fff;
+  padding: 1rem 1rem;
+}
+.title {
+  font-weight: 800;
+  font-size: 56px;
+  line-height: 1.2;
+  padding: 3rem 3rem;
+  padding-right: 0.5rem;
+}
+
+.text_section {
+  line-height: 1.6;
+  font-size: 24px;
+  padding-left: 3rem;
+}
+.text_section p {
+  padding-bottom: 1rem;
+}
+
+@media (min-width: 420px) and (max-width: 768px) {
+  .title {
+    font-weight: 500;
+    font-size: 28px;
+    line-height: 1.1;
+    padding: 1rem 1rem;
+    padding-right: 0.5rem;
+  }
+
+  .text_section {
+    line-height: 1.4;
+    font-size: 14px;
+    padding-left: 1rem;
+  }
+  .text_section p {
+    padding-bottom: 0.5rm;
+  }
+}
+@media (min-width: 768px) and (max-width: 820px) {
+  .title {
+    font-weight: 600;
+    font-size: 32px;
+    line-height: 1.1;
+    padding: 2rem 2rem;
+    padding-right: 0.5rem;
+  }
+
+  .text_section {
+    line-height: 1.4;
+    font-size: 16px;
+    padding-left: 2rem;
+  }
+  .text_section p {
+    padding-bottom: 1rem;
+  }
+}
+
+@media (min-width: 820px) and (max-width: 1024px) {
+  .title {
+    font-weight: 600;
+    font-size: 36px;
+    line-height: 1.2;
+    padding: 2.2rem 2.2rem;
+    padding-right: 0.5rem;
+  }
+
+  .text_section {
+    line-height: 1.6;
+    font-size: 18px;
+    padding-left: 2.2rem;
+  }
+  .text_section p {
+    padding-bottom: 1rem;
+  }
+}
+
+@media (min-width: 1024px) and (max-width: 1440px) {
+  .title {
+    font-weight: 750;
+    font-size: 48px;
+    line-height: 1.2;
+    padding: 2.8rem 2.8rem;
+    padding-right: 0.5rem;
+  }
+
+  .text_section {
+    line-height: 1.6;
+    font-size: 22px;
+    padding-left: 2.8rem;
+  }
+  .text_section p {
+    padding-bottom: 1rem;
+  }
 }
