--- a/app/article/[id]/page.module.css
+++ b/app/article/[id]/page.module.css
@@ -1,4 +1,10 @@
-.h2 {
-  color: darkblue;
-  background-color: burlywood;
+.container {
+  color: #113569;
+  display: flex;
+}
+.article_content {
+  width: 60vw;
+}
+.aside {
+  width: 40vw;
 }
